--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@vercel/kv": "^3.0.0",
+    "@upstash/redis": "^1.36.1",
     "clsx": "^2.1.1",
     "nanoid": "^5.1.6",
     "next": "16.1.6",
